refactor: InputValidator 중복 코드 줄이고 에러 메세지 포함하게 변경