@@ -4,6 +4,9 @@ import javax.security.auth.callback.CallbackHandler;
 import java.util.List;
 
 public class InputValidator {
+    private void throwIllegalArgument(String message) {
+        throw new IllegalArgumentException(message);
+    }
 
     // 기존 구분자 & 커스텀 구분자 외의 구분자가 입력될 경우
     // separation에 추가
@@ -11,7 +14,7 @@ public class InputValidator {
         for (int i = 0; i < separated.size(); i++) {
             if (i % 2 == 1) { // 구분자
                 if (!separators.contains(separated.get(i))) {
-                    throw new IllegalArgumentException();
+                    throwIllegalArgument("[ERROR]유효하지 않은 구분자가 사용되었습니다.");
                 }
             }
         }
@@ -22,8 +25,8 @@ public class InputValidator {
     public void lastElement(List<String> separated) {
         // 마지막 요소의 첫글자가 숫자가 아닐경우 exception
         // 첫글자가 숫자면 나머지 글자도 숫자임
-        if (!Character.isDigit(separated.getLast().charAt(0))) {
-            throw new IllegalArgumentException();
+        if (!Character.isDigit(separated.get(separated.size() - 1).charAt(0))) {
+            throwIllegalArgument("[ERROR]수식이 숫자로 끝나지 않습니다.");
         }
     }
 
@@ -31,7 +34,7 @@ public class InputValidator {
     // firstLetter에 추가
     public void validatingFirstLetter(char firstLetter) {
         if (firstLetter != '/' && !Character.isDigit(firstLetter)) { // 조건식 맞는지 확인해볼 것
-            throw new IllegalArgumentException();
+            throwIllegalArgument("[ERROR]수식이 커스텀 구분자 선언자 혹은 숫자로 시작되지 않습니다.");
         }
     }
 
@@ -51,7 +54,7 @@ public class InputValidator {
     // findCustomSeparator에 추가(customValidator)
     private void checkForm(String given) {
         if (!given.contains("//") || ! given.contains("\\n")) { // 조건식 맞는지 확인
-            throw new IllegalArgumentException();
+            throwIllegalArgument("[ERROR]커스텀 구분자 선언자가 올바르게 사용되지 않았습니다.");
         }
     }
 
@@ -60,11 +63,11 @@ public class InputValidator {
     // findCustomSeparator에 추가(customValidator)
     private void checkContent(String customSeparator) {
         if (customSeparator.isEmpty() || customSeparator.isBlank()) { // 정확한 하나만 사용하게 고치기
-            throw new IllegalArgumentException();
+            throwIllegalArgument("[ERROR]커스텀 구분자 선언자 안에는 한 글자 이상 선언해야 합니다.");
         }
         for (int i = 0;i < customSeparator.length();i++) {
             if (Character.isDigit(customSeparator.charAt(i))) {
-                throw new IllegalArgumentException();
+                throwIllegalArgument("[ERROR]커스텀 구분자 선언자 안에는 숫자가 들어갈 수 없습니다.");
             }
         }
     }
@@ -73,7 +76,7 @@ public class InputValidator {
     // findCustomSeparator에 추가(customValidator)
     private void notNumAfterCustom(String given) {
         if (!Character.isDigit(given.charAt(given.indexOf("\\n") + 2))) {
-            throw new IllegalArgumentException();
+            throwIllegalArgument("[ERROR]커스텀 구분자 선언자 뒤에 수식이 숫자로 시작하지 않습니다.");
         }
     }
 }
